Add new video page and Django admin for video management

--- a/main/static/main/css/style.css
+++ b/main/static/main/css/style.css
@@ -29,11 +29,11 @@ html {
 
 .navbar-links {
     display: flex;
-    width: 400px;
-    max-width: 50%;
     justify-content: center;
     align-items: center;
     height: 100%;
+    gap: 20px;
+    flex-wrap: wrap;
 }
 
 .navbar-links a {
@@ -41,7 +41,7 @@ html {
     height: 60%;
     color: white;
     font-weight: bold;
-    padding: 18px 40px;
+    padding: 10px 20px;
     transition: 0.3s all;
 }
 
