--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -8,14 +8,17 @@
     <link rel="apple-touch-icon" sizes="180x180" href="{% static 'main/favicons/apple-touch-icon.png' %}">
     <link rel="icon" type="image/png" sizes="32x32" href="{% static 'main/favicons/favicon-32x32.png' %}">
     <link rel="icon" type="image/png" sizes="16x16" href="{% static 'main/favicons/favicon-16x16.png' %}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="manifest" href="{% static 'main/favicons/site.webmanifest' %}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" integrity="sha384-tViUnnbYAV00FLIhhi3v/dWt3Jxw4gZQcNoSCxCIFNJVCx7/D55/wXsrNIRANwdD" crossorigin="anonymous">    <link rel="stylesheet" href="{% static 'main/css/style.css' %}">
 </head>
 <body>
-    <nav class="navbar">
-        <a href="{% url 'index' %}">
+    
+    <nav class="navbar d-flex align-items-center justify-content-between px-3">
+        <a href="{% url 'index' %}" class="d-flex align-items-center text-decoration-none">
             <img class="logo" src="{% static 'main/img/PainterRosti.jpeg' %}" alt="Company Logo">
+            <span class="fs-3 fw-bold text-light ms-3" style="font-family: 'Lobster', cursive;">Painter Rosti <i class="fa-solid fa-paint-roller"></i></span>
         </a>
 
         <div class="toggle">
@@ -25,10 +28,10 @@
         </div>
 
         <div class="navbar-links">
-            <a href="{% url 'index' %}">Home</a>
-            <a href="#about">About</a>
-            <a href="#contact">Contact</a>
-            <a href="{% url 'videos' %}">Videos</a>
+            <a class="fs-4" href="{% url 'index' %}">Home</a>
+            <a class="fs-4" href="#about">About</a>
+            <a class="fs-4" href="#contact">Contact</a>
+            <a class="fs-4" href="{% url 'videos' %}">Videos</a>
         </div>
     </nav>
     
