--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -4,12 +4,22 @@
 {% block title %}Painter Rosti{% endblock %}
 
 {% block content %}
+
 <section class="hero-section d-flex align-items-center" id="home">
-  <div class="container text-center">
+  <div class="container text-center text-white">
     <h1 class="display-4 fw-bold">Professional Painting, Plastering & Taping Services</h1>
     <p class="lead">Reliable construction solutions to make your space perfects</p>
+    <div class="mt-4">
+      <a href="#about" class="btn btn-primary btn-lg me-3">Get Started</a>
+      <a href="#contact" class="btn btn-outline-light btn-lg">Contact Us</a>
+    </div>
   </div>
+  <a href="#about" class="scroll-down-top-left">
+    <i class="fas fa-chevron-down"></i>
+    <span>Explore</span>
+  </a>
 </section>
+
 
 <section class="container my-5">
     <div class="row text-center g-4">
@@ -61,28 +71,13 @@
     <div id="workCarousel" class="carousel slide" data-bs-ride="carousel">
       <p class="fm-border">Photoes from our work</p>
       <div class="carousel-inner rounded shadow">
-
-        <div class="carousel-item active">
-          <img src="{% static 'main/img/photo_from_work1.jpg' %}" class="d-block w-100" alt="Work Example 1">
+      {% for photo in photos %}
+        <div class="carousel-item {% if forloop.first %}active{% endif %}">
+          <img src="{{ photo.image.url }}" class="d-block w-100" alt="{{ photo.title }}">
         </div>
+      {% endfor %}
+    </div>
 
-        <div class="carousel-item">
-          <img src="{% static 'main/img/photo_from_work2.jpg' %}" class="d-block w-100" alt="Work Example 2">
-        </div>
-
-        <div class="carousel-item">
-          <img src="{% static 'main/img/plastering.jpg' %}" class="d-block w-100" alt="Work Example 3">
-        </div>
-
-        <div class="carousel-item">
-          <img src="{% static 'main/img/painting.jpg' %}" class="d-block w-100" alt="Work Example 3">
-        </div>
-
-        <div class="carousel-item">
-          <img src="{% static 'main/img/taping_bathroom.jpg' %}" class="d-block w-100" alt="Work Example 3">
-        </div>
-
-      </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#workCarousel" data-bs-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Previous</span>
